--- a/metadata.yaml
+++ b/metadata.yaml
@@ -36,6 +36,7 @@ subjects:
 - !lcsh 'American drama -- 20th century'
 - !lcsh 'Experimental fiction, American'
 - !lcc 'PS'
+- GITenberg
 tableOfContents: 'Susie Asado -- Ada -- Miss Furr and Miss Skeene -- A collection
   -- France -- Americans -- Italians -- A sweet tail (Gypsies) -- The history of Belmonte
   -- In the grass (on Spain) -- England -- Mallorcan stories -- Scenes. Actions and
